--- a/public/404.html
+++ b/public/404.html
@@ -36,6 +36,7 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://flowbite.com/application-ui/demo/images/og-image.jpg">
 <meta property="og:image:type" content="image/png">
+<script>
 
   if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
       document.documentElement.classList.add('v2fLMH8w3xgUEQcl63H9');
